# MLAgentFactory

./: .env.example  .gitignore  CLAUDE.md  KAGGLE_TOOLS_SUMMARY.md  MIGRATION_NOTES.md  PROCESSING_COMPLETE_IMPLEMENTATION.md  QUICKSTART.md  README.md  SESSION_MANAGER_README.md  agentic-ml-design.md  file_creation_agent.py  kaggle_agent_example.py  main.py  pyproject.toml  run_app.sh  run_gradio_app.sh  run_streamlit_session_manager.sh  start_session_manager.sh  test_tools.py  uci_example.py
.claude/commands/: commit.md
docs/: LOGGING_AND_REPLAY.md  kaggle_tools_guide.md
examples/: README.md  logging_example.py  markdown_to_pdf_example.py
src/: app.py
src/mlagentfactory/: __init__.py
src/mlagentfactory/agents/: __init__.py  chat_agent.py  data_acquisition.py  logging_client.py  orchestrator.py  web_fetcher.py
src/mlagentfactory/cli/: __init__.py  session_manager_cli.py
src/mlagentfactory/services/: __init__.py  api.py  message_store.py  process_manager.py  session_manager.py
src/mlagentfactory/tools/: __init__.py  file_io_tools.py  kaggle_tools.py  markdown_to_pdf_tools.py  uci_tools.py  web_fetch_tools.py
src/mlagentfactory/ui/: __init__.py  __main__.py  app.py  gradio_ui.py  streamlit_ui.py  streamlit_ui_session_manager.py
src/mlagentfactory/utils/: __init__.py  logging_config.py
tests/: test_processing_complete.py
