[project]
name = "mlagentfactory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.69.0",
    "beautifulsoup4>=4.14.2",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.120.0",
    "gradio>=5.0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-instrumentation>=0.58b0",
    "opentelemetry-instrumentation-requests>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "playwright>=1.55.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "ucimlrepo>=0.0.7",
    "uvicorn>=0.37.0",
]
